feat: use current subscription api
